start json server

--- a/app/views/static_pages/user.html.erb
+++ b/app/views/static_pages/user.html.erb
@@ -1,5 +1,3 @@
 <br />
-<% @artists.each do |artist| %>
-  <div><%= artist.foreign_ids[0].attrs[:foreign_id] %></div>
-<% end %>
+  <div><%= names %></div>
 
