--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,1 @@
-<%= @data.first.user.screen_name %>
-<%= @data.first.user.name %>
-<%= @data.first.user.profile_image_url %>
+<%= @data.foreign_ids[0].attrs %>
